회원가입 placeholder수정

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -141,7 +141,7 @@
               type="text"
               class="form-control"
               id="userid"
-              placeholder="영문, 숫자 5-11자"
+              placeholder="영문, 숫자 조합 5-11자"
             />
             <span id="id-error-message"></span>
           </div>
@@ -155,7 +155,7 @@
               type="password"
               class="form-control"
               id="userpw"
-              placeholder="숫자, 영문, 특수문자 조합 최소 8자"
+              placeholder="영문, 숫자 조합 최소 8자"
               style="margin-bottom: 10px"
             />
             <input
