--- a/templates/detail.html
+++ b/templates/detail.html
@@ -38,6 +38,7 @@
         }
         .imageArea{ /* 메인 프로필 이미지 영역 css */
             border: 1px solid black;
+            background-color: white;
             width: 400px;
             height: 400px;
             border-radius: 50%;
@@ -100,8 +101,27 @@
             overflow: scroll;
         }
     </style>
+    <script>
+
+        
+        $(document).ready(function () {
+            let result = document.getElementById('result_info').innerText
+            console.log(result)
+            
+            profile();
+        });
+        
+        // function profile() {
+        //     fetch("/profile/<userId>").then((res) => res.json()).then((data) => {
+        //         let rows = data['result']
+        //         console.log(rows)
+        //     });
+        // }
+
+    </script>
 </head>
 <body>
+    <div id="result_info" style="display: none;">"{{profile_result}}"</div>
     <div class="row">   <!-- 최상단 로고, 회원관련 영역 시작-->
         <div class="col-6 header">
             <img src="/static/images/IMG_7217.png">
@@ -117,8 +137,8 @@
                 <div class="col-12 imageArea">
                     <img src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png">
                 </div>
-                <div class="col-12 nameArea">
-                    <p>이름은 여기로 불러주시면 됩니다.</p>
+                <div id="{{result}}" class="col-12 nameArea">
+                    <p>{{name}}</p>
                 </div>
             </div>
         </div>
@@ -133,16 +153,16 @@
     </div>  <!-- 편집버튼 영역 끝-->
     <div class="row main3"> <!-- 본인 프로필 영역 시작 -->
         <div class="col-12">
-            <p><i class="fa-solid fa-laptop-code"></i>필드 정보는 여기로 불러주시면 됩니다.</p>
+            <p><i class="fa-solid fa-laptop-code"></i>{{field}}</p>
         </div>
         <div class="col-12">
-            <p><i class="fa-brands fa-github"></i>깃허브 정보는 여기로 불러주시면 됩니다.</p>
+            <p><i class="fa-brands fa-github"></i>{{github}}</p>
         </div>
         <div class="col-12">
-            <p><i class="fa-brands fa-chrome"></i>블로그 정보는 여기로 불러주시면 됩니다.</p>
+            <p><i class="fa-brands fa-chrome"></i>{{blog}}</p>
         </div>
         <div class="col-12">
-            <p><i class="fa-regular fa-newspaper"></i>mbti 정보는 여기로 불러주시면 됩니다.</p>
+            <p><i class="fa-regular fa-newspaper"></i>{{mbti}}</p>
         </div>
         <div class="col-12">
             <p><i class="fa-brands fa-instagram"></i>instagram 정보는 여기로 불러주시면 됩니다.</p>
@@ -152,10 +172,17 @@
         </div>
     </div>  <!-- 본인 프로필 영역 끝 -->
     <hr style="width:95%; margin:0 auto; margin-top: 20px; margin-bottom: 20px;">
+    <div class="row main2"> <!-- 편집버튼 영역 시작-->
+        <div class="col-12 editBtnArea">
+            <button type="button" class="btn btn-primary">방명록 남기기
+
+            </button>
+        </div>
+    </div>  <!-- 편집버튼 영역 끝-->
     <div class="row main4"> <!-- 방명록 영역 시작 -->
         <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"> <!-- 여기서부터 방명록 코드 반복시작-->
             <div class="row" style="margin-top: 10px;">
-                <div class="col-12" style="border: 1px solid black; width: 95%; margin:0 auto">
+                <div class="col-12" style=" width: 95%; margin:0 auto">
                     <div class="row" >
                         <div class="col-2 userImgArea">
                             
