로그인 검증 수정

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -103,6 +103,7 @@
           agree2 &&
           password == confirmPassword &&
           passwordPattern.test(password)
+            && idPattern.test(userId)
         ) {
           $("#join-button").prop("disabled", false);
         } else {
