--- a/templates/register.html
+++ b/templates/register.html
@@ -165,8 +165,12 @@
               <input type="text" class="form-control" id="name">
             </div>
             <div class="col-12">
-              <label for="inputPassword4" class="form-label">field</label>
-              <input type="text" class="form-control" id="field">
+              <label for="inputState" class="form-label">field</label>
+              <select id="field" class="form-select">
+                <option selected>field...</option>
+                <option>Frontend</option>
+                <option>Backend</option>
+              </select>
             </div>
             <div class="col-12">
               <label for="inputAddress" class="form-label">github</label>
