--- a/templates/index.html
+++ b/templates/index.html
@@ -89,11 +89,12 @@
 				let blog = e['blog']
 				let email = e['email']
 				let mbti = e['mbti']
+        let image = e['image']
         
 				let temp_html = `<a href="/profile/${userid}">
                           <div class="col">
                             <div id="${userid}" class="card">
-                            <img src="" alt="..." />
+                            <img src="${image}" alt="..." />
                             <div class="card-body">
                               <h5 class="card-title">${name}</h5>
                               <p class="card-text">직무 : ${field}</p>
