--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,211 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/jquery-3.6.4.js"
-      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
 
-      body {
-        background-color: rgb(239, 239, 239);
-        /* margin-top: 20px; */
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-      .main {
-        background-color: rgb(239, 239, 239);
+    body {
+      background-color: rgb(239, 239, 239);
+      /* margin-top: 20px; */
+    }
 
-        width: 35%;
-        height: 1000px;
-        margin: auto;
-      }
+    .main {
+      background-color: rgb(239, 239, 239);
 
-      .mainLogo {
-        /* background-color: beige; */
-        height: 100px;
-        background-image: url(/static/images/IMG_7217.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
-        margin: 20px 50px 0px 50px;
-      }
-    </style>
-    <script>
-      function join() {
-        $.ajax({
-          type: "POST",
-          url: "/signup",
-          data: {
-            id_give: $("#userid").val(),
-            pw_give: $("#userpw").val(),
-          },
-          success: function (response) {
-            if (response["result"] == "success") {
-              alert("회원가입이 완료되었습니다.");
-              window.location.href = "/";
-            } else {
-              window.location.reload(); // 아이디가 이미 DB에 존재하는 경우 처리
-            }
-          },
-        });
-      }
+      width: 35%;
+      height: 1000px;
+      margin: auto;
+    }
 
-      function allclick() {
-        if ($("#allagree").prop("checked")) {
-          $('input[type="checkbox"]').prop("checked", true);
-        } else {
-          $('input[type="checkbox"]').prop("checked", false);
-        }
-      }
-      //가입 검증부분
-      $(document).ready(function () {
-        function validateForm() {
-          let agree1 = $("#agree1").prop("checked");
-          let agree2 = $("#agree2").prop("checked");
-          let password = $("#userpw").val();
-          let confirmPassword = $("#userpw-check").val();
-          let userId = $("#userid").val();
-          const idPattern = /^[a-zA-Z0-9]{5,11}$/;
-          const passwordPattern = /^(?=.*\d).{8,}$/;
-          if (!idPattern.test(userId)) {
-            $("#userid").css("border-color", "red");
-            $("#id-error-message")
-              .html("5자 이상 11자 이하로 입력해주세요.")
-              .css("color", "red");
+    .mainLogo {
+      /* background-color: beige; */
+      height: 100px;
+      background-image: url(/static/images/IMG_7217.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      margin: 20px 50px 0px 50px;
+    }
+  </style>
+  <script>
+    function join() {
+      $.ajax({
+        type: "POST",
+        url: "/signup",
+        data: {
+          id_give: $("#userid").val(),
+          pw_give: $("#userpw").val(),
+        },
+        success: function (response) {
+          if (response["result"] == "success") {
+            alert("회원가입이 완료되었습니다.");
+            window.location.href = "/";
           } else {
-            $("#userid").css("border-color", "");
-            $("#id-error-message").html("").css("color", "");
+            window.location.reload(); // 아이디가 이미 DB에 존재하는 경우 처리
           }
-          if (password != confirmPassword) {
-            $("#userpw-check").css("border-color", "red");
-            $("#error-message")
-              .html("비밀번호가 일치하지 않습니다.")
-              .css("color", "red");
-          } else {
-            $("#userpw-check").css("border-color", "");
-            $("#error-message").html("").css("color", "");
-          }
-          if (
-            agree1 &&
-            agree2 &&
-            password == confirmPassword &&
-            passwordPattern.test(password)
-          ) {
-            $("#join-button").prop("disabled", false);
-          } else {
-            $("#join-button").prop("disabled", true);
-          }
-        }
-        $('input[type="checkbox"]').change(function () {
-          validateForm();
-        });
-        $('input[type="text"]').keyup(function () {
-          validateForm();
-        });
-        $("#userpw-check").keyup(function () {
-          validateForm();
-        });
+        },
       });
-    </script>
-  </head>
+    }
 
-  <body>
-    <div class="main">
-      <div class="mainLogo"></div>
-      <div class="inputId">
-        <div class="row">
-          <div class="col" style="margin: 20px 50px 0px 50px">
-            <p>아이디</p>
-            <input
-              type="text"
-              class="form-control"
-              id="userid"
-              placeholder="영문, 숫자 조합 5-11자"
-            />
-            <span id="id-error-message"></span>
-          </div>
-        </div>
-      </div>
-      <div class="inputPw">
-        <div class="row">
-          <div class="col" style="margin: 25px 50px 10px 50px">
-            <p>비밀번호</p>
-            <input
-              type="password"
-              class="form-control"
-              id="userpw"
-              placeholder="영문, 숫자 조합 최소 8자"
-              style="margin-bottom: 10px"
-            />
-            <input
-              type="password"
-              class="form-control"
-              placeholder="비밀번호 재입력"
-              id="userpw-check"
-            />
-            <span id="error-message"></span>
-          </div>
-        </div>
-      </div>
+    function allclick() {
+      if ($("#allagree").prop("checked")) {
+        $('input[type="checkbox"]').prop("checked", true);
+      } else {
+        $('input[type="checkbox"]').prop("checked", false);
+      }
+    }
+    //가입 검증부분
+    $(document).ready(function () {
+      function validateForm() {
+        let agree1 = $("#agree1").prop("checked");
+        let agree2 = $("#agree2").prop("checked");
+        let password = $("#userpw").val();
+        let confirmPassword = $("#userpw-check").val();
+        let userId = $("#userid").val();
+        const idPattern = /^[a-zA-Z0-9]{5,11}$/;
+        const passwordPattern = /^(?=.*\d).{8,}$/;
+        if (!idPattern.test(userId)) {
+          $("#userid").css("border-color", "red");
+          $("#id-error-message")
+            .html("5자 이상 11자 이하로 입력해주세요.")
+            .css("color", "red");
+        } else {
+          $("#userid").css("border-color", "");
+          $("#id-error-message").html("").css("color", "");
+        }
+        if (password != confirmPassword) {
+          $("#userpw-check").css("border-color", "red");
+          $("#error-message")
+            .html("비밀번호가 일치하지 않습니다.")
+            .css("color", "red");
+        } else {
+          $("#userpw-check").css("border-color", "");
+          $("#error-message").html("").css("color", "");
+        }
+        if (
+          agree1 &&
+          agree2 &&
+          password == confirmPassword &&
+          passwordPattern.test(password)
+        ) {
+          $("#join-button").prop("disabled", false);
+        } else {
+          $("#join-button").prop("disabled", true);
+        }
+      }
+      $('input[type="checkbox"]').change(function () {
+        validateForm();
+      });
+      $('input[type="text"]').keyup(function () {
+        validateForm();
+      });
+      $("#userpw-check").keyup(function () {
+        validateForm();
+      });
+    });
+  </script>
+</head>
+
+<body>
+  <div class="main">
+    <div class="mainLogo"></div>
+    <div class="inputId">
       <div class="row">
-        <div class="col-12" style="margin: 25px 50px 10px 50px">
-          <input type="checkbox" id="allagree" onclick="allclick()" /> 전체 동의
-        </div>
-        <div class="col-12" style="margin: 0px 50px 10px 50px">
-          <input type="checkbox" id="agree1" /> [필수] 이용약관 동의
-        </div>
-        <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement1">
-          <a style="color: #1890ff">전문 보기</a>
-        </div>
-        <div class="col-12" style="margin: 0px 50px 10px 50px">
-          <input type="checkbox" id="agree2" /> [필수] 개인정보 수집 및 이용
-          동의
-        </div>
-        <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement2">
-          <a style="color: #1890ff">전문 보기</a>
-        </div>
-        <div class="col-12" style="margin: 0px 50px 10px 50px">
-          <input type="checkbox" id="agree3" /> [선택] 마케팅 정보 수집 동의
-        </div>
-        <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement3">
-          <a style="color: #1890ff">전문 보기</a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col" style="margin: 25px 50px 10px 50px">
-          <button
-            type="button"
-            class="btn btn-dark"
-            style="width: 100%"
-            onclick="join()"
-            id="join-button"
-            disabled
-          >
-            가입하기
-          </button>
+        <div class="col" style="margin: 20px 50px 0px 50px">
+          <p>아이디</p>
+          <input type="text" class="form-control" id="userid" placeholder="영문, 숫자 조합 5-11자" />
+          <span id="id-error-message"></span>
         </div>
       </div>
     </div>
-  </body>
+    <div class="inputPw">
+      <div class="row">
+        <div class="col" style="margin: 25px 50px 10px 50px">
+          <p>비밀번호</p>
+          <input type="password" class="form-control" id="userpw" placeholder="영문, 숫자 조합 최소 8자"
+            style="margin-bottom: 10px" />
+          <input type="password" class="form-control" placeholder="비밀번호 재입력" id="userpw-check" />
+          <span id="error-message"></span>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12" style="margin: 25px 50px 10px 50px">
+        <input type="checkbox" id="allagree" onclick="allclick()" /> 전체 동의
+      </div>
+      <div class="col-12" style="margin: 0px 50px 10px 50px">
+        <input type="checkbox" id="agree1" /> [필수] 이용약관 동의
+      </div>
+      <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement1">
+        <a style="color: #1890ff">전문 보기</a>
+      </div>
+      <div class="col-12" style="margin: 0px 50px 10px 50px">
+        <input type="checkbox" id="agree2" /> [필수] 개인정보 수집 및 이용
+        동의
+      </div>
+      <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement2">
+        <a style="color: #1890ff">전문 보기</a>
+      </div>
+      <div class="col-12" style="margin: 0px 50px 10px 50px">
+        <input type="checkbox" id="agree3" /> [선택] 마케팅 정보 수집 동의
+      </div>
+      <div class="col-12" style="margin: 0px 50px 10px 50px" id="agreement3">
+        <a style="color: #1890ff">전문 보기</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" style="margin: 25px 50px 10px 50px">
+        <button type="button" class="btn btn-dark" style="width: 100%" onclick="join()" id="join-button" disabled>
+          가입하기
+        </button>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
