--- a/templates/index.html
+++ b/templates/index.html
@@ -121,11 +121,10 @@
     <div class="mainBtns">
       <div id="signButton">
         <button type="button" class="btn btn-outline-primary" onClick="location.href='signin'" style="border: none">
-
-          Sign in
+          로그인
         </button>
         <button type="button" class="btn btn-primary" onClick="location.href='signup'">
-          Sign Up
+          회원가입
         </button>
       </div>
       <div id="signoutButton">
@@ -133,7 +132,7 @@
           프로필 등록하기
         </button>
         <button type="button" class="btn btn-primary" id="sign-out-button" onclick="logOutHandler()">
-          Sign Out
+          로그아웃
         </button>
       </div>
     </div>
