--- a/templates/detail.html
+++ b/templates/detail.html
@@ -220,7 +220,7 @@
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
         <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
             <div class="row" style="margin-top: 10px;">
-                <div class="col-12" style="border: 1px solid black; width: 95%; margin:0 auto">
+                <div class="col-12" style="width: 95%; margin:0 auto">
                     <div class="row" >
                         <div class="col-2 userImgArea">
                             
@@ -258,7 +258,7 @@
         </div>  <!-- 여기서부터 방명록 코드 반복 끝-->
         <div class="col-12" style="margin-top: 10px; margin-bottom: 10px;"><!-- 여기서부터 방명록 코드 반복시작-->
             <div class="row" style="margin-top: 10px;">
-                <div class="col-12" style="border: 1px solid black; width: 95%; margin:0 auto">
+                <div class="col-12" style="width: 95%; margin:0 auto">
                     <div class="row" >
                         <div class="col-2 userImgArea">
                             
