--- a/templates/detail.html
+++ b/templates/detail.html
@@ -70,6 +70,7 @@
         display: block;
         margin: auto;
         width: 100%;
+        height: 100%;
       }
       .nameArea {
         /* 메인 프로필 이름 관련 css */
@@ -177,7 +178,7 @@
         <div class="row">
           <div class="col-12 imageArea">
             <img
-              src="/static/images/d84248170c2c52303db27306a00fb861effd194bae87d73dd00522794070855d.png"
+              src="{{image}}" 
             />
           </div>
           <div id="{{result}}" class="col-12 nameArea">
