detail.html delete btn add

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         body {
-            background-color: rgb(238, 240, 243);
+            /* background-color: rgb(238, 240, 243); */
         }
 
         * {
@@ -193,6 +193,8 @@
         <!-- 편집버튼 영역 시작-->
         <div class="col-12 editBtnArea">
             <button type="button" class="btn btn-primary" onClick="location.href='/profile'">프로필 편집</button>
+            <button type="button" class="btn btn-outline-danger">프로필 삭제</button>
+
         </div>
     </div>
     <!-- 편집버튼 영역 끝-->
