로그인 시  상세프로필 보기 가능 구현

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,13 +62,12 @@
   </style>
   <script>
     $(document).ready(function () {
-      show_profile()
       valid().then((response) => {
         console.log(response)
 
         response['result'] == "fail" ?
-          $('#signButton').css('display', 'block')
-          : $('#signoutButton').css('display', 'block')
+          $('#signButton').css('display', 'block') && show_profile(false)
+          : $('#signoutButton').css('display', 'block') && show_profile(true)
         
         if (response['result']['id'] != undefined){
           profile_check(response['result']['id'])
@@ -112,7 +111,7 @@
       }
     }
 
-    function show_profile() {
+    function show_profile(check) {
       fetch('/profile/all').then((res) => res.json()).then((data) => {
         let rows = data['result']
         console.log(rows)
@@ -126,8 +125,9 @@
           let email = e['email']
           let mbti = e['mbti']
           let image = e['image']
-
-          let temp_html = `<div onClick="location.href ='/profile/${userid}'" style="cursor:pointer;" class="col">
+          let temp_html;
+          if(check==true){
+            temp_html = `<div onClick="location.href ='/profile/${userid}'" style="cursor:pointer;" class="col">
                             <div class="card" style="padding:5px">
                               <img src="${image}"/>
                               <div class="card-body">
@@ -138,6 +138,21 @@
                               </div>
                             </div>
                           </div>`
+          }else{
+            temp_html = `<div style="cursor:pointer;" onClick="location.href='signin'" class="col">
+                            <div class="card" style="padding:5px">
+                              <img src="${image}"/>
+                              <div class="card-body">
+                                <h5 class="card-title">${name}</h5>
+                                <p class="card-text">직무 : ${field}</p>
+                                <a class="card-text" href="${blog}">블로그 : ${blog}</a>
+                                <p class="card-text">mbti : ${mbti}</p>
+                              </div>
+                            </div>
+                          </div>`
+          }
+
+            
           $('#profile-box').append(temp_html)
         })
       })
