right top profile btn delete

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -165,9 +165,9 @@
             <img src="/static/images/IMG_7217.png" onClick="location.href='/'"/>
         </div>
         <div class="col-6 btn" id="buttons">
-            <button type="button" class="btn btn-primary" onClick="location.href='/profile'">
+            <!-- <button type="button" class="btn btn-primary" onClick="location.href='/profile'">
                 ?프로필수정?
-            </button>
+            </button> -->
             <button type="button" class="btn btn-primary" onClick="logOutHandler()">
                 로그아웃
             </button>
