--- a/templates/detail.html
+++ b/templates/detail.html
@@ -66,7 +66,7 @@
         .imageArea>img {
             /* 메인 프로필 이미지 관련 css */
             margin: 0 auto;
-            
+
         }
 
         .nameArea {
@@ -136,23 +136,42 @@
         }
     </style>
     <script>
+        let writer_Id
         $(document).ready(function () {
-            let result = document.getElementById("result_info").innerText;
-            console.log(result);
-
-            profile();
+            valid().then((response) => {
+                writer_Id = response['result']['id']
+                console.log(writer_Id)
+            });
         });
 
-        // function profile() {
-        //     fetch("/profile/<userId>").then((res) => res.json()).then((data) => {
-        //         let rows = data['result']
-        //         console.log(rows)
-        //     });
-        // }
+        function valid() {
+            return fetch("/valid")
+                .then((res) => res.json())
+                .then((data) => {
+                    return data;
+                });
+        }
+
         function logOutHandler() {
             document.cookie =
                 "mytoken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
             window.location.href = "/";
+        }
+
+        function commentWrite() {
+            let profileId = $('#recipient-name').val()
+            let writerId = writer_Id
+            let commentText = $('#message-text').val()
+
+            let formData = new FormData();
+            formData.append("profileId_give", profileId);
+            formData.append("writerId_give", writerId);
+            formData.append("commentText_give", commentText);
+
+            fetch('/comment/write', { method: "POST", body: formData }).then((res) => res.json()).then((data) => {
+                alert(data['msg']);
+                window.location.href = "/profile/<userId>";
+            });
         }
     </script>
 </head>
@@ -162,7 +181,7 @@
     <div class="row">
         <!-- 최상단 로고, 회원관련 영역 시작-->
         <div class="col-6 header">
-            <img src="/static/images/IMG_7217.png" onClick="location.href='/'"/>
+            <img src="/static/images/IMG_7217.png" onClick="location.href='/'" />
         </div>
         <div class="col-6 btn" id="buttons">
             <!-- <button type="button" class="btn btn-primary" onClick="location.href='/profile'">
@@ -380,7 +399,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="recipient-name" class="col-form-label">받는 사람:</label>
-                            <input type="text" class="form-control" id="recipient-name" value="{{name}}" disabled>
+                            <input type="text" class="form-control" id="recipient-name" value="{{userId}}" disabled>
                         </div>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label">방명록 글:</label>
