프로필 조회 후 profileId를 파라미터로 넘겨주기

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -177,7 +177,7 @@
 </head>
 
 <body>
-    <div id="result_info" style="display: none">"{{profile_result}}"</div>
+    <div id="result_profileId" style="display: none">"{{profileId}}"</div>
     <div class="row">
         <!-- 최상단 로고, 회원관련 영역 시작-->
         <div class="col-6 header">
