--- a/templates/revise.html
+++ b/templates/revise.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>프로필 등록하기</title>
+  <title>프로필 편집하기</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="icon" href="/static/images/favicon.png">
@@ -147,7 +147,7 @@
         </div>
         <div class="form row col-6">
           <form class="row g-3">
-            <legend>프로필 등록하기</legend>
+            <legend>프로필 편집하기</legend>
             <div class="col-12">
               <label for="inputEmail4" class="form-label">name</label>
               <input type="text" class="form-control" id="name">
@@ -195,8 +195,8 @@
               </select>
             </div>
             <div class="col-12">
-              <button onclick="save_profile()" type="submit" class="btn btn-primary">등록</button>
-              <button onclick="location.href='/'" type="button" class="btn btn-primary">다음에 등록</button>
+              <button onclick="save_profile()" type="submit" class="btn btn-primary">편집</button>
+              <button onclick="location.href='/'" type="button" class="btn btn-primary">다음에 편집</button>
             </div>
           </form>
         </div>
