--- a/templates/detail.html
+++ b/templates/detail.html
@@ -429,7 +429,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="recipient-name" class="col-form-label">받는 사람:</label>
-                            <input type="text" class="form-control" id="recipient-name" value="{{userid}}" disabled>
+                            <input type="text" class="form-control" id="recipient-name" value="{{profileId}}" disabled>
                         </div>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label">방명록 글:</label>
