--- a/templates/register.html
+++ b/templates/register.html
@@ -98,10 +98,10 @@
       preview.src = URL.createObjectURL(event.target.files[0]);
     }
     var base64
-    const uploadProfile = async (e) => {
+    const uploadProfile = (e) => {
       const file = (e.target.files)[0];
 
-      base64 = await convertBase64(file);
+      base64 = convertBase64(file);
       var preview = document.getElementById("preview");
       preview.src = URL.createObjectURL(file);
     }
