프로필 삭제 DELETE 방식으로 수정

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -162,13 +162,13 @@
 
         function delete_profile() {
             $.ajax({
-                type: "POST",
+                type: "DELETE",
                 url: "/profile/delete",
                 data: {
-                    id_give: user_Id,
+                    id_give: writer_Id
                 },
                 success: function (response) {
-                    if (response["result"] == "success") {
+                    if (response['msg'] != null) {
                         alert(response['msg']);
                         window.location.href = "/";
                     } else {
