프로필편집 부분 기존 데이터 남아있도록 수정 / 이미지 이름 변경

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -287,15 +287,7 @@
   <body>
     <div id="result_profileId" style="display: none">"{{profileId}}"</div>
     <div class="row">
-      <!-- 최상단 로고, 회원관련 영역 시작-->
-      <div class="col-6 header" id="profile-head">
-        <img src="/static/images/IMG_7217.png" onClick="location.href='/'" />
-      </div>
-      <div class="col-6 btn">
-        <button type="button" class="btn btn-primary" onclick="logOutHandler()">
-          로그아웃
-        </button>
-      </div>
+            <img src="/static/images/logo.png" onClick="location.href='/'" />
     </div>
     <!-- 최상단 로고, 회원관련 영역 끝-->
     <div class="row main">
