--- a/templates/register.html
+++ b/templates/register.html
@@ -167,7 +167,7 @@
   <div class="title">
     <div class="row">
       <div class="col" style="margin:50px">
-        <a href="/"><img src="/static/images/IMG_2914.png" alt="홈으로가기" width="50"></a>
+        <a href="/"><img src="/static/images/home.png" alt="홈으로가기" width="50"></a>
       </div>
     </div>
     <div class="profile">
