--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     .mainLogo {
       /* background-color: beige; */
       height: 100px;
-      background-image: url(/static/images/IMG_7217.png);
+      background-image: url(/static/images/logo.png);
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
@@ -200,7 +200,7 @@
     <div id="profile-box" class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card">
-          <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">이름</h5>
             <p class="card-text">기수 : 14기</p>
@@ -212,7 +212,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">이름</h5>
             <p class="card-text">기수 : 14기</p>
@@ -224,7 +224,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">이름</h5>
             <p class="card-text">기수 : 14기</p>
@@ -236,7 +236,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">이름</h5>
             <p class="card-text">기수 : 14기</p>
@@ -248,7 +248,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">이름</h5>
             <p class="card-text">기수 : 14기</p>
@@ -260,7 +260,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="/static/images/467704_392166_1110.jpg" class="card-img-top" alt="..." />
+          <img src="/static/images/testimg.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">이름</h5>
             <p class="card-text">기수 : 14기</p>
