--- a/templates/revise.html
+++ b/templates/revise.html
@@ -76,7 +76,7 @@
     }
 
     function profile_check(userId) {
-      let userURL = '/profile/' + userId
+      let userURL = '/profile/' + userId +'/update'
       $.ajax({
         type: "GET",
         url: "/profileCheck",
@@ -85,8 +85,8 @@
         },
         success: function (response) {
           console.log(response['result'])
-          if (edited && response['result'] != null) { //프로필 보유자는 detail 페이지로 이동
-            window.location.href = userURL.toString()
+          if (response['result'] == null) { //프로필 보유자는 update 페이지로 이동
+            window.location.href = '/'
           }
         }
       });
@@ -117,6 +117,7 @@
     }
 
     function update_profile() {
+
       let name = $('#name').val()
       let field = $('#field').val()
       let github = $('#github').val()
@@ -124,7 +125,7 @@
       let email = $('#email').val()
       let MBTI = $('#MBTI').val()
       let image = base64
-      
+
       let formData = new FormData();
       formData.append("name_give", name);
       formData.append("field_give", field);
@@ -134,8 +135,6 @@
       formData.append("MBTI_give", MBTI);
       formData.append("userid_give", userid);
       formData.append("image_give", image);
-
-      
 
       fetch('/profile/<userid>/update', { method: "POST", body: formData }).then((res) => res.json()).then((data) => {
         alert(data['msg']);
@@ -156,14 +155,14 @@
   <div class="title">
     <div class="row">
       <div class="col" style="margin:50px">
-        <a href="/"><img src="/static/images/IMG_2914.png" alt="홈으로가기" width="50"></a>
+        <a href="/"><img src="/static/images/home.png" alt="홈으로가기" width="50"></a>
       </div>
     </div>
     <div class="profile">
       <div class="profile_body row">
         <div class="col-6">
           <form class="upload_photo">
-            <img id="preview" class="card-img-top" src="#" alt="미리보기" /> <br /><br />
+            <img id="preview" class="card-img-top" src="{{image}}" alt="미리보기" /> <br /><br />
             <label for="formFile" class="form-label">업로드 할 사진을 선택하세요.</label>
             <input class="form-control" type="file" id="formFile" name="image" onChange="uploadProfile(event)" /><br />
           </form>
@@ -172,31 +171,31 @@
           <form class="row g-3">
             <legend>프로필 편집하기</legend>
             <div class="col-12">
-              <label for="inputEmail4" class="form-label">name</label>
-              <input type="text" class="form-control" id="name">
+              <label for="{{name_for_label}}" class="form-label">name</label>
+              <input type="text" class="form-control" id="name" value="{{name}}">
             </div>
             <div class="col-12">
-              <label for="inputState" class="form-label">field</label>
+              <label for="input" class="form-label">field</label>
               <select id="field" class="form-select">
-                <option selected>field...</option>
+                <option selected>{{field}}</option>
                 <option>Frontend</option>
                 <option>Backend</option>
               </select>
             </div>
             <div class="col-12">
-              <label for="inputAddress" class="form-label">github</label>
-              <input type="text" class="form-control" id="github" placeholder="github.com">
+              <label for="input" class="form-label">github</label>
+              <input type="text" class="form-control" id="github" value="{{github}}">
             </div>
             <div class="col-12">
-              <label for="inputAddress2" class="form-label">blog</label>
-              <input type="text" class="form-control" id="blog" placeholder="blog.com">
+              <label for="input" class="form-label">blog</label>
+              <input type="text" class="form-control" id="blog" value="{{blog}}">
             </div>
             <div class="col-12">
-              <label for="exampleFormControlTextarea1" class="form-label">email</label>
-              <input type="text" class="form-control" id="email" placeholder="이메일을 입력해주세요.">
+              <label for="input" class="form-label">email</label>
+              <input type="text" class="form-control" id="email" value="{{email}}">
             </div>
             <div class="col-md-4">
-              <label for="inputState" class="form-label">MBTI</label>
+              <label for="input" class="form-label">MBTI</label>
               <select id="MBTI" class="form-select">
                 <option selected>MBTI...</option>
                 <option>ISTJ</option>
