--- a/templates/signin.html
+++ b/templates/signin.html
@@ -45,7 +45,7 @@
       .mainLogo {
         /* background-color: beige; */
         height: 100px;
-        background-image: url(/static/images/IMG_7217.png);
+        background-image: url(/static/images/logo.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
