방명록 등록시 undefined 나오는 현상 수정

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -223,7 +223,7 @@
         fetch("/comment/write", { method: "POST", body: formData })
           .then((res) => res.json())
           .then((data) => {
-            alert(data["msg"]);
+            alert(data["result"]);
             window.location.href = "/profile/" + profileId;
           });
       }
