--- a/templates/detail.html
+++ b/templates/detail.html
@@ -46,7 +46,7 @@
 
         .imageArea {
             /* 메인 프로필 이미지 영역 css */
-            border: 1px solid black;
+            border: 1px solid white;
             background-color: white;
             width: 400px;
             height: 400px;
@@ -103,7 +103,7 @@
 
         .userImgArea {
             /* 방명록 작성자 이미지영역 관련 css */
-            border: 1px solid black;
+            border: 1px solid white;
             background-color: white;
             width: 50px;
             height: 50px;
@@ -239,7 +239,8 @@
                                 writerImage = data["result"]["image"];
                                 commentText = e["commentText"];
                                 temp_html = `
-                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid black">
+                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid white; border-radius: 30px; box-shadow:2px 3px 4px 0px
+">
         <!-- 여기서부터 방명록 코드 반복시작-->
         <div class="row" style="margin-top: 10px; ">
           <div class="col-12" style="width: 95%; margin: 0 auto">
