detail css Modified

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -250,7 +250,7 @@
                                 writerImage = data["result"]["image"];
                                 commentText = e["commentText"];
                                 temp_html = `
-                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid white; border-radius: 30px; box-shadow:2px 3px 4px 0px">
+                                <div class="col-12" style="margin-top: 10px; margin-bottom: 10px; border:1px solid white; border-radius: 30px; box-shadow:2px 3px 4px 0px gray">
         <!-- 여기서부터 방명록 코드 반복시작-->
         <div class="row" style="margin-top: 10px; ">
           <div class="col-12" style="width: 95%; margin: 0 auto">
